src/objects/CommDefine__c.object
<CustomObject>
    <fields>
        <fullName>ReportKScheduleMessageIsRichTextFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>連絡事項は一つ入力項目に変更し、フォントサイズ、色を変更できる機能切替フラグ 
TRUE:機能有効
FALSE:機能無効（デフォルト値）</inlineHelpText>
        <label>予定表連絡事項がリッチ表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportKScheduleMessageIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予定表画面に、「連絡事項」セクション表示・非表示制御フラグ
TRUE:表示
FALSE:非表示（Default)</inlineHelpText>
        <label>予定表連絡事項表示・非表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportKScheduleWhere__c</fullName>
        <description>会計ＯＰに定義する料理範囲データの抽出Ｗｈｅｒｅ条件（会計ＯＰのＮａｍｅに定義の文言を含め場合、料理として、抽出される）
データ構造：（朝食集計情報は個別に表示したい場合、OPTION値は１に設定すると、集計の最後行目に、朝食を表示する）
文言キー:朝食フラグ(OPTION),
文言キー:朝食フラグ(OPTION),
文言キー:朝食フラグ(OPTION),
例：会席,お膳,単品,仕出し,朝食:1
例の説明：見積もり明細から料理抽出の条件は 会計ＯＰの名は [会席][お膳][単品][仕出し][朝食]いずれが含めすると、料理として、画面に表示する
そして、「朝食」OPTION値：１を設定するため、会計ＯＰ名は「朝食」文言を含めする場合、全部朝食に集計を行う</description>
        <inlineHelpText>会計ＯＰに定義する料理範囲データの抽出Ｗｈｅｒｅ条件（会計ＯＰのＮａｍｅに定義の文言を含め場合、料理として、抽出される）
データ構造：（朝食集計情報は個別に表示したい場合、OPTION値は１に設定すると、集計の最後行目に、朝食を表示する）
文言キー:朝食フラグ(OPTION),
文言キー:朝食フラグ(OPTION)
例：会席,お膳,単品,仕出し,朝食:1
例の説明：見積もり明細から料理抽出の条件は 会計ＯＰの名は [会席][お膳][単品][仕出し][朝食]いずれが</inlineHelpText>
        <label>レポート_予定表抽出条件1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportPdfTitleAutoBreakFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計書(施設コード33、34)、見積書、発注書、注文請書、納品書、検収書宛名が一定文字数を超えた場合に自動改行がどうか切り替えフラグ
TRUE：自動改行しない
FALSE：自動改行する（デフォルト値）</inlineHelpText>
        <label>宛名自動改行フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResAccRef__c</fullName>
        <description>This value will holds the reference for Account Lookup field id in(Lead__c.refAccount__c) Reservation object. When user clicks on &quot;Create New&quot; link to create reservation from Alarm popup window or streaming window, it will pass the Account reference value to reservation screen to auto populate.</description>
        <label>Reservation Account Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResCarNoRef__c</fullName>
        <inlineHelpText>車ナンバーのHTMLのIDの情報を格納する、自動設定するため、手動設定が不要</inlineHelpText>
        <label>Reservation Car Number Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResContRef__c</fullName>
        <description>This value will holds the reference for Contact Lookup field id in (Lead__c.Relcontact__c) Reservation object. When user clicks on &quot;Create New&quot; link to create reservation from Alarm popup window or streaming window, it will pass the contact reference value to reservation screen to auto populate.</description>
        <label>Reservation Contact Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResPhoneRef__c</fullName>
        <description>This value will holds the reference for Phone Number field id (Lead__c.ContactPhone__c)in Reservation object. When user clicks on &quot;Create New&quot; link to create reservation from Alarm popup window or streaming window, it will pass the Phone number reference value to reservation screen to auto populate.</description>
        <label>Reservation Phone Number Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RespectIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計書、請求書、見積書、予約確認書、レジカードなど出力際に、敬称を選択できるがどうか切り替えフラグ
TRUE：敬称選択できる
FALSE:敬称選択できず、様でデフォルトを出力する（デフォルト値）
注：設定→作成→選択リスト値セット→敬称（リスト値設定変更可能）</inlineHelpText>
        <label>敬称選択機能有効フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RokuyoIsNoShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>六輝情報はルームインジケータ、予約ポップ、タイムテーブルに表示、非表示制御
TRUE:六輝情報非表示
FALSE:六輝情報表示（デフォルト値）</inlineHelpText>
        <label>六輝情報非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomDelegatePrefix__c</fullName>
        <inlineHelpText>ネットからの予約自動取込の親部屋マークとして、記号で一文字定義、この定義されたマークを予約名の文字列先頭に付加する（前提条件：N部屋一括予約場合のみ、該当標識を親部屋に付加する）</inlineHelpText>
        <label>親部屋マーク</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorAccountPrintCode__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <inlineHelpText>ルームインジケータの予約情報詳細ウインドウの「会計書」ボタンをクリックする場合
出力された会計書の到着日、出発日、泊数情報の取得元切替フラグ
0/空欄：予約インデックスの到着日、出発日、泊数で会計書を出力する
1：明細別単位で会計書を出力する（該当部屋に対して、連泊期間により、会計書にを出力する）</inlineHelpText>
        <label>ルームインジケータの印刷ボタンから会計書出力内容フラグ</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorBusinessHourMM__c</fullName>
        <defaultValue>&quot;1200&quot;</defaultValue>
        <inlineHelpText>書式:HHMM  ４桁に定義ください
0〜２３間に設定する、設定時間により、当日の営業日切替判断する
例：　「13」を設定すると、
　　　　13時前に、前日の予約データをルームインジケータ画面に表示する
　　　　13時以後、当日の予約データをルームインジケータ画面に表示する</inlineHelpText>
        <label>ルームインジケータ営業日切替時間</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorBusinessHour__c</fullName>
        <inlineHelpText>未使用</inlineHelpText>
        <label>未使用</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorBusinessSwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IN/OUT切り替え時間までは前日の予約情報を表示する、しない制御
TRUE:IN/OUT切り替え時間までは前日の予約情報を表示する
FALSE:IN/OUT切り替え時間までは前日の予約情報を表示しない(デフォルト値)</inlineHelpText>
        <label>ルームインジケータ営業日切替表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorCashRegisterCode__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>ルームインジケータ画面、レジカード一括印刷ボタンを押下したあと、印刷したい部屋を選べる画面を表示する・しない切替フラグ
1：表示しない（デフォルト）
2：表示する</inlineHelpText>
        <label>ルームインジケータレジカード一括印刷制御コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorDetailWindowAutoCloseFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ルームインジケータ、タイムテーブルの『部屋詳細情報』の「予約名」「お客様」リンクをクリック後、該当「部屋詳細情報」を自動閉じるしない、するフラグ</description>
        <inlineHelpText>TRUE:ウィンドウがそのまま 
FALSE:自動閉じる（デフォルト値）</inlineHelpText>
        <label>ルームインジケータの部屋詳細ウィンドウ自動閉じるフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorEstIsCloneFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータから延泊処理を行った際、新規作成された予約の見積明細が自動入力ように改善対応（延泊前の最終日の見積明細からコピーする）
TRUE:自動入力する
FALSE:自動入力しない</inlineHelpText>
        <label>延泊の見積明細自動入力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorGoBookingFlexAppConfirmFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ルームインジケータ新規後一括予約画面へ遷移する・しない切替選択機能制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorGoBookingFlexAppFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ルームインジケータ新規後一括予約画面へ自動遷移制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorGpCIMsgIsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータ画面に一括チェックイン機能利用可・不可制御フラグ
True:一括チェックイン機能利用可
False:一括チェックイン機能利用不可 （デフォルト値)</inlineHelpText>
        <label>ルームインジケータ一括チェックイン機能起動制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorGpCancelMsgIsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータ画面にアサイン一括取消機能利用可・不可制御フラグ
True:一括取消機能利用可
False:一括取消機能利用不可 （デフォルト値)</inlineHelpText>
        <label>ルームインジケータアサイン一括取消機能起動制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorGpClMsgIsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータ画面にキャンセル機能利用する場合、同グループの予約情報を一括キャンセルする・しない機能利用可・不可制御フラグ
True:一括キャンセル機能利用可
False:一括キャンセル機能利用不可 （デフォルト値)</inlineHelpText>
        <label>ルームインジケータ一括キャンセル機能起動制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorGpOIMsgIsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータ画面にN部屋の場合、一括外出、入室機能利用可・不可制御フラグ
True:一括外出、入室機能利用可
False:一括外出、入室機能利用不可 （デフォルト値)</inlineHelpText>
        <label>ルームインジケータ一括外出/入室機能起動制御フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorInfoMaxLength__c</fullName>
        <defaultValue>4</defaultValue>
        <description>ルームインジケータ画面に、部屋名最大表示文字数（４文字から９文字まで対応する）</description>
        <inlineHelpText>ルームインジケータ画面に、部屋名最大表示文字数設定（４文字から９文字まで入力してください）</inlineHelpText>
        <label>ルームインジケータ表示最大文字数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorInfoNameType__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>1：顧客様名
2：予約名</inlineHelpText>
        <label>ルームインジケータ表示名</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorIsShowLeadCancelBtn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータの詳細画面に「予約のキャンセル」ボタンを表示・非表示フラグ
TRUE：該当ボタンを非表示
FALSE：該当ボタンを表示する（デフォルト値）</inlineHelpText>
        <label>ルームインジケータ予約のキャンセルボタンの非表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorIsShowStayPersons__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータ画面に、予約人数画面に表示制限
TRUE： 予約人数表示する
FALSE：予約人数非表示する（Defautl値）</inlineHelpText>
        <label>ルームインジケータ予約人数表示・非表示制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorIsShowTimeInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータ画面に、タイムテーブル情報を表示・非表示制御する
TRUE：タイムテーブル情報を表示する
FALSE:タイムテーブル情報を非表示する (Default値）</inlineHelpText>
        <label>ルームインジケータのタイムテーブル表示・非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorLookupHoverIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ルームインジケータミニページ表示・非表示フラグ</description>
        <inlineHelpText>ルームインジケータ画面の予約詳細情報表示用ミニページ表示・非表示制御
TRUE: 予約詳細情報表示用ミニページ表示
FALSE：予約詳細情報表示用ミニページ非表示(デフォルト値）</inlineHelpText>
        <label>ルームインジケータミニページ表示・非表示制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorMultiSelectFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータ画面、複数店舗選択照会フラグ
TRUE:複数店舗選択、照会可能
FALSE:ひとつ店舗選択、照会可（デフォルト値）</inlineHelpText>
        <label>ルームインジケータ複数店舗選択照会フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorPastLeadToCoColorFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>過去日の連泊予約の部屋ステータスはCO(チェックアウト)色に表示する・しない制御フラグ
TRUE:過去日の連泊予約の部屋ステータスはチェックアウト処理しないでも、CO色に表示
FALSE:過去日の連泊予約の部屋ステータスはチェックアウト処理しない場合、「滞在」色を表示する（デフォルト値)</inlineHelpText>
        <label>過去日の部屋ステータスのCO色設定</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorQueryLimitFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ルームインジケータ画面、予約検索対象条件にレコードタイプ制限あり、なし切替用
FALSE：レコードタイプ範囲制限あり(デフォルト値)
TRUE：レコードタイプ範囲制限なし</inlineHelpText>
        <label>forSFDBBUGルームインジケータ検索制限フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorRoomTypeSelectFlg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>ルームインジケータ画面、タイムテーブル画面の部屋タイプを選択すると、未割り当てウインドウの予約も該当部屋タイプのみ情報を表示する・しない制御
0:該当店舗のすべて未割り当て予約を未割り当てウインドウに表示（デフォルト値）
1:画面の部屋タイプを掛けときに、掛けた部屋タイプの予約のみを未割り当てウインドウに表示</inlineHelpText>
        <label>タイムテーブルの未割り当て予約ウインドウの表示コード</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorShowHisFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>選択すると、過去と未来も日付け指定にて、参照出来る</description>
        <inlineHelpText>ルームインジケータ画面に、前日、当日、翌日、指定日など検索条件表示制御フラグ
TRUE：上記検索条件を表示する
FALSE：上記検索条件を表示なし、当日分だけデータを表示する</inlineHelpText>
        <label>ルームインジケータ履歴表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomIndicatorSmTypeMsgIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TRUE：確認メッセージを表示する
FALSE；確認メッセージを表示しない（デフォルト値）</inlineHelpText>
        <label>ルームチェンジする際、確認アラートを出す・出ないフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomPriceProdName__c</fullName>
        <inlineHelpText>予約ポップ画面からプランなし予約データを登録する場合、該当会計商品名で見積もり明細を登録する、該当商品単価は料金表設定によて、自動設定を行う</inlineHelpText>
        <label>室料の会計商品名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomScheduleGoBookingFlexAppConfirmFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>タイムテーブル新規後一括予約画面へ遷移する・しない切替選択機能制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomScheduleGoBookingFlexAppFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>タイムテーブル新規後一括予約画面へ自動遷移制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomScheduleTimerMinute__c</fullName>
        <inlineHelpText>タイムテーブル画面情報を自動更新間隔分数 
インターバルタイマの設定値は1以上を設定ください
インターバルタイマの設定値は0 又は 空白に設定する場合、自動更新を行わない</inlineHelpText>
        <label>タイムテーブルページ更新のインターバルタイマ</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomSortDiv__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <description>１：NAMEで並べる（Default)  2:DisplayNo</description>
        <inlineHelpText>ルームインジケータの部屋表示順制御：
　1 : お部屋名昇順
　2 : お部屋項目（DisplayNo）設定値昇順</inlineHelpText>
        <label>ルームインジケータお部屋表示順</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeBasePlanTierFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約ポップ画面からベースプラン、種類別Tier、販売状態を指定可否フラグ
TRUE:予約ポップ画面からベースプラン、種類別Tier、販売状態を直接変更可能になる
FALSE：該当機能が無効（デフォルト値）</inlineHelpText>
        <label>予約ポップラックレート設定[プラン]有効フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomTypeDateEventFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>年、月をかえる場合、画面イベント制限フラグ
FALSE: 年、月を変えると、画面データを更新する(デフォルト値）
TRUE: 年、月を変えた後に送信ボタンで画面データを更新する</inlineHelpText>
        <label>予約ポップの年月イベント制限フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomTypeDateLinkFlg__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>予約ポップの日付からクリックすると、遷移先の制御フラグ 
1.該当日付のルームインジケータへ遷移する（デフォルト値） 
2.予約レポートへ遷移する</inlineHelpText>
        <label>予約ポップの日付から遷移先の制御フラグ</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeDatePosition__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>予約ポップの「年月」項目の表示箇所の制御コード
1:画面の右に表示する（デフォルト値）
2:画面の左に表示する</inlineHelpText>
        <label>予約ポップの年月表示箇所コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeGoBookingFlexAppConfirmFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>予約ポップ新規後一括予約画面へ遷移する・しない切替選択機能制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomTypeGoBookingFlexAppFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>予約ポップ新規後一括予約画面へ自動遷移制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomTypeInputPastData__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約ポップ過去日付で予約登録可否判断フラグ（TRUE：過去日付で予約登録可　FALSE：不可）</inlineHelpText>
        <label>予約ポップの過去予約可フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomTypeMessageIsRichTextFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>連絡事項は一つ入力項目に変更し、フォントサイズ、色を変更できる機能切替フラグ 
TRUE:機能有効
FALSE:機能無効（デフォルト値）</inlineHelpText>
        <label>予約ポップ連絡事項がリッチ表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomTypeMessageIsShowFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>予約ポップ画面に、「連絡事項」セクション表示・非表示制御フラグ
TRUE:表示
FALSE:非表示（Default)</inlineHelpText>
        <label>予約ポップ連絡事項表示・非表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomTypeNewBookingWinVersion__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>新規予約ウィンドウバージョン
1. XML（予約ポップ画面の予約入力項目カスタマイズ）で入力項目を拡張できる、項目必須、非必須設定できる
2. XML(予約ポップ画面の予約入力項目カスタマイズ V2.0)で、入力項目を拡張できる、表示の列、表示の箇所、デフォルト項目の一部はず対応できる</inlineHelpText>
        <label>予約ポップの新規予約ウィンドウのバージョン値</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomTypeRealAgtPageMode__c</fullName>
        <inlineHelpText>予約ポップのリアルAGTエリアレイアウト表示コード
1/空欄：ヘッダーに提供数を表示する（デフォルト値）
2：ヘッダーに販売数を表示し、リアルAGT残室を下表の和にする</inlineHelpText>
        <label>予約ポップのリアルAGTエリアレイアウト表示コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeReport__c</fullName>
        <defaultValue>&quot;$0001 客室タイプ別予約表&quot;</defaultValue>
        <inlineHelpText>予約ポップ画面：「部屋タイプ」タイトルの上のリンク遷移先のレポート名</inlineHelpText>
        <label>レポート_予約ポップレポート名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeRoomIsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約ポップの予約入力画面に、部屋入力項目表示・非表示制御フラグ
TRUE:部屋入力項目が表示
FALSE:部屋入力項目が非表示
Default：非表示</inlineHelpText>
        <label>予約ポップの部屋項目表示・非表示フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomTypeSaleStatus__c</fullName>
        <defaultValue>&quot;通常:1,休館,貸切&quot;</defaultValue>
        <inlineHelpText>予約ポップ画面に営業の設定値リストを定義する
データ構造：営業ステータス[:][1][;][文字色定義値]
例：通常:1;BLACK,休館,貸切;ORANGE
例の説明：営業ステータス設定は【通常,休館,貸切】３つ設定値を表示する
[:1]を付けているの「通常」ステータスは営業のデフォルトステータスとして、画面に表示する   
注：(OPTION)はいずれのステータスに一つ定義が必要
[;BLACK][;ORANGE]を付けているのスタータスの文字色定義値で画面に表示する</inlineHelpText>
        <label>予約ポップ営業ステータス</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeSeminarIsShow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約ポップの予約データ登録項目「セミナー」は画面に表示、非表示制御フラグ
TRUE：表示
FALSE：非表示</inlineHelpText>
        <label>予約ポップのセミナー入力可・不可フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomTypeShowPageMode__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <inlineHelpText>予約ポップの残室数レイアウト表示コード
1：予約ポップの残室数とラックレート情報同時に表示する
0/空欄：予約ポップの残室情報のみ表示する（デフォルト値）</inlineHelpText>
        <label>予約ポップの残室数レイアウト表示コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeStartDateMode__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>予約ポップ開始日モード制御
&quot;1&quot;:毎月の１日から一月間データを表示する（Default値）
&quot;2&quot;:当日から一月間データを表示する</inlineHelpText>
        <label>予約ポップ開始日モード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomTypeStockSettingFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>予約ポップ画面から在庫値、販売状態を指定可否フラグ
TRUE:予約ポップ画面から在庫値を直接変更可能になる（選択リスト：「在庫設定」選択肢追加）
FALSE：該当機能が無効（デフォルト値）</inlineHelpText>
        <label>予約ポップ在庫設定有効フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomUseEbFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True場合、予約ポップ/予約一括　画面に、E/B機能を起動する</description>
        <inlineHelpText>True場合、予約ポップ/予約一括　画面に、E/B機能を起動する</inlineHelpText>
        <label>E/B機能フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomsCashRegAutoCreateFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>複数部屋の場合、部屋別に宿帳を作成する・しない切り替えフラグ 
TRUE:複数部屋の部屋別に宿帳自動作成する 
FALSE:複数部屋の部屋別に宿帳自動作成しない（デフォルト値）</inlineHelpText>
        <label>複数部屋の宿帳自動作成フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoundType__c</fullName>
        <defaultValue>1</defaultValue>
        <description>0:切り捨て 
1:四捨五入 
税金計算の端数処理の項目</description>
        <inlineHelpText>0:切り捨て 
1:四捨五入 
2:切り上げ
税金計算の端数処理の項目</inlineHelpText>
        <label>会計税の端数処理</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RsvLockType__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <inlineHelpText>売上日別ロック際に、会計ロック機能コードを定義する
0：会計ロック機能無効（デフォルト値）
１：連泊の最終泊ロック
　　最終泊ロック場合、全泊の会計をロックする
２：連泊中の日々のロックする
　　日別の会計をロックする</inlineHelpText>
        <label>売上日別会計ロック機能コード</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule1DeviationDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>該当パラメータ利用対象
自動チェックイン処理と会計データ自動計算処理バッチ起動スケジュール（BulkProcessSchedule_1）
売上バッチ（BulkProcessSchedule_2）</description>
        <inlineHelpText>スケジュール起動日により、実際の業務処理日の日数差値を定義する
例：
起動日： 2013/10/15  →　起動日：-1 に設定すると、実際の処理指定日は　2013/10/14
起動日： 2013/10/15  →　起動日：1 に設定すると、実際の処理指定日は　2013/10/16
該当パラメータ利用対象：
自動チェックイン処理と会計データ自動計算処理バッチ（BulkProcessSchedule_1）
売上バッチ（BulkProcessSchedule_2）</inlineHelpText>
        <label>バッチスケジュール１処理日</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule2DeviationDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>売上詳細画面の「売上更新」ボタン関連ロジック自動起動スケジュール</description>
        <inlineHelpText>スケジュール起動日により、実際の業務処理日の日数差値を定義する
例：
起動日： 2013/10/15  →　起動日：-1 に設定すると、実際の処理指定日は　2013/10/14
起動日： 2013/10/15  →　起動日：1 に設定すると、実際の処理指定日は　2013/10/16</inlineHelpText>
        <label>バッチスケジュール２処理日</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScheduleBulkAccountPaymentDays__c</fullName>
        <defaultValue>-1</defaultValue>
        <description>支払いメディア一括登録バッチ起動スケジュール</description>
        <inlineHelpText>支払いメディアの一括自動入力バッチ起動スケジュール
スケジュール起動日により、実際の業務処理日の日数差値を定義する
例：
起動日： 2013/10/15 →　起動日：-1 に設定すると、実際の処理指定日は　2013/10/14
起動日： 2013/10/15 →　起動日：1 に設定すると、実際の処理指定日は　2013/10/16</inlineHelpText>
        <label>バッチスケジュール(支払いメディア一括登録)処理日</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SchedulePayCheckDays__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>入金チェックバッチ起動スケジュール
スケジュール起動日により、実際の売上日の日数差値を定義する 
例： 
起動日： 2013/10/15 →　起動日：-1 に設定すると、実際の処理売上日は　2013/10/14 
起動日： 2013/10/15 →　起動日：1 に設定すると、実際の処理売上日は　2013/10/16</inlineHelpText>
        <label>バッチスケジュール(入金チェック)処理日</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SchedulePcaCsvHeaderIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PCA連携のCSV出力ファイルにヘッダー付加する・しない制御フラグ
TRUE：ヘッダー付加する（デフォルト値）
FALSE：ヘッダー付加しない</inlineHelpText>
        <label>バッチスケジュール(PCA連携)CSVヘッダー付加する・しないフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchedulePcaDeviationDays__c</fullName>
        <defaultValue>-1</defaultValue>
        <description>PCA連携のCSV抽出処理バッチ起動スケジュール</description>
        <inlineHelpText>PCA連携のCSV抽出処理バッチ起動スケジュール
スケジュール起動日により、実際の業務処理日の日数差値を定義する
例：
起動日： 2013/10/15 →　起動日：-1 に設定すると、実際の処理指定日は　2013/10/14
起動日： 2013/10/15 →　起動日：1 に設定すると、実際の処理指定日は　2013/10/16</inlineHelpText>
        <label>バッチスケジュール(PCA連携)処理日</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SchedulePcaResultSendType__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>PCA連携後の結果通知方式制御を行う
0:連携結果を通知しない
1:メールで結果を通知（デフォルト値)
2:ドキュメントの連携ファイルのフォルダに追加
3:メール通知とドキュメントの連携ファイルのフォルダに追加</inlineHelpText>
        <label>PCA連携結果通知制御コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleResultMailAddress__c</fullName>
        <inlineHelpText>バッチ処理異常の場合、メール宛を格納する、複数メールアドレスが存在する場合、「,」で分ける設定する</inlineHelpText>
        <label>バッチスケジュール結果送信宛</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleWorkTimeDays__c</fullName>
        <defaultValue>-2</defaultValue>
        <description>勤怠時間チェック処理バッチ起動スケジュール</description>
        <inlineHelpText>勤怠時間チェック処理バッチ起動スケジュール
スケジュール起動日により、実際の勤怠日の日数差値を定義する 
例： 
起動日： 2013/10/15 →　起動日：-1 に設定すると、実際の処理勤怠日は　2013/10/14 
起動日： 2013/10/15 →　起動日：1 に設定すると、実際の処理勤怠日は　2013/10/16</inlineHelpText>
        <label>バッチスケジュール(勤怠時間チェック)処理日</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShopAccountSearchDiv__c</fullName>
        <inlineHelpText>店舗別で会計商品を検索区分(空白、1、2、3)
空白: 全て商品を検索する、店舗別区別なし
1:　全て会計商品が店舗別検索する
2:　商品処理種別が「通常、プラン、室料、朝食、夕食、サービス料」のみ店舗別検索する
3:　商品処理種別が「前受付金、支払」のみ店舗別検索する</inlineHelpText>
        <label>店舗別会計商品検索区分</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopBasePlanFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>パラメータ：店舗別プランがONの場合、該当パラメータで予約ポップのベースプランは店舗別表示する・しない制御可能
TRUE:ベースプランは店舗別表示する
FALSE:各店舗に全てベースプランを表示する</inlineHelpText>
        <label>店舗別ベースプラン</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShopDefaultCodeSetMode__c</fullName>
        <inlineHelpText>会計書、請求書、見積書のロゴ取得元を切り替え用フラグ
0/空欄:機能無効（デフォルト値）
1:予約の部屋タイプに紐づいた店舗ロゴを表示する
2:ログイン中のユーザの店舗のロゴを表示する</inlineHelpText>
        <label>会計書、請求書、見積書のロゴ取得元</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopLeadDefaultInfo__c</fullName>
        <inlineHelpText>店舗別予約の泊数、到着時刻、出発時刻を設定する
該当定義に含めない店舗コードは泊数が1、到着時刻と出発時刻は予約のデフォルト設定値で返却する
書式：店舗コード1,店舗コード2&amp;泊数,到着時刻,出発時刻;店舗コード3&amp;泊数,到着時刻,出発時刻
例1   =&gt; 01,02&amp;1,16:30,09:00;03&amp;0,12:00,14:00
例2(店舗情報定義なし)  =&gt; &amp;0,12:00,14:00</inlineHelpText>
        <label>店舗別予約デフォルト値</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopPlanSetupFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>店舗別単位でプラン情報を定義する場合、該当フラグがTRUEに設定する
TRUE:プラン設定する場合、プランに店舗別で分ける設定する
FALSE:プラン設定する場合、店舗と関係なし設定する</inlineHelpText>
        <label>店舗別プラン</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SimpleAccountsPrintFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>簡易会計画面の[会計確定」ボタンをクリック後、会計書PDFのウインドウを開く、または　レシートプリンタへ送信、直接印刷するフラグ
TRUE:レシートプリンタへ送信、明細印刷する
FALSE:会計書PDFウインドウを開く（デフォル値）</inlineHelpText>
        <label>簡易会計の印刷</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteRootUrl__c</fullName>
        <description>NEXPO機能、サイトURL定義情報格納</description>
        <inlineHelpText>設定→開発→サイトに指定のサイトドメイン名と一致が必要
例：https://expo.yourcompany.com</inlineHelpText>
        <label>サイトURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StaffNoCopyFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>スタッフ画面のレクタングルコピー機能有効・無効制御フラグ
レクタングルコピー機能有効：TRUE
レクタングルコピー機能無効：FALSE（デフォルト値）</inlineHelpText>
        <label>スタッフのレクタングルコピー制御</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StayCancelRuleKbn__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>1 : 連泊の初日のキャンセルレートで全泊の料金を計算する
2:  各泊目から別々のキャンセルレートで各泊目の料金を計算する</inlineHelpText>
        <label>連泊キャンセル料計算区分</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StockDataCreateFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>在庫通知データ作成フラグ（在庫通知機能利用）
TRUE:在庫通知データを作成する（デフォルト値）
FALSE:在庫通知データを作成しない</inlineHelpText>
        <label>在庫通知データ作成フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StockSyncIsActiveFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>仕入明細、会計明細、注文（受注）に従って、商品単位に在庫管理する・しないフラグ
TRUE：該当機能が有効
FALSE:該当機能が無効（デフォルト）</inlineHelpText>
        <label>在庫連動有効フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StockSyncIsMode__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <inlineHelpText>予約ポップ画面の最大残室数はリアルＡＧＴ残室数減算後表示する・しない切替フラグ
0: 予約ポップ画面の最大残室数 = 部屋タイプの「$数」 - リアルＡＧＴ残室数
1: 予約ポップ画面の最大残室数 = 部屋タイプの「$数」 (デフォルト値）</inlineHelpText>
        <label>予約ポップのリアルＡＧＴ残室数連動フラグ</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier4Report__c</fullName>
        <defaultValue>&quot;$0011 客室割当状況 - 昼と夕 [Tier4]&quot;</defaultValue>
        <label>レポート_客室割当状況 - 昼と夕 [Tier4]</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier6Report__c</fullName>
        <defaultValue>&quot;$0011 客室割当状況 - 昼と夕 [Tier6]&quot;</defaultValue>
        <label>レポート_客室割当状況 - 昼と夕 [Tier6]</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier7Report__c</fullName>
        <defaultValue>&quot;$0011 客室割当状況 - 昼と夕 [Tier7]&quot;</defaultValue>
        <label>レポート_客室割当状況 - 昼と夕 [Tier7]</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeTableConfirmFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>タイムテーブル画面から予約情報を移動される場合、確認メッセージを表示、非表示フラグ 
	TRUE:確認メッセージ表示
	FALSE:確認メッセージ非表示（デフォルト値）</inlineHelpText>
        <label>タイムテーブル予約移動確認フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeTableDefaultMode__c</fullName>
        <defaultValue>&quot;31日&quot;</defaultValue>
        <inlineHelpText>タイムテーブル画面の期間表示の初期値を設定する 
入力可能値リスト: 
90日 
31日(デフォルト値)
7日 
30分 
15分 
10分 
5分</inlineHelpText>
        <label>タイムテーブル期間表示初期値</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeTableProcessLimit__c</fullName>
        <defaultValue>130</defaultValue>
        <inlineHelpText>タイムテーブル画面に初期表示の部屋数</inlineHelpText>
        <label>タイムテーブルの表示部屋数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimerSecond__c</fullName>
        <defaultValue>60</defaultValue>
        <inlineHelpText>画面情報を自動更新間隔秒数（対象画面：予約ポップ、予定表、ルームインジケータ）　「デフォルト値：60秒」
自動的に設定秒数で、サーバーから最新情報を取得して、表示画面に反映する</inlineHelpText>
        <label>ページ更新のインターバルタイマ</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimetableIsNew__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>タイムテーブル画面から新規予約登録可、不可制御
TRUE:新規予約登録不可
FALSE:新規予約登録可（デフォルト値）</inlineHelpText>
        <label>タイムテーブルの新規予約不可</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnitPriceDefKb__c</fullName>
        <inlineHelpText>1:税込、サービス料抜き
2:税込、サービス料込
3:税抜、サービス料抜き
4:税抜、サビース料込</inlineHelpText>
        <label>会計商品単価定義区分</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserBeginTimeCalMethodType__c</fullName>
        <defaultValue>&quot;切り上げ&quot;</defaultValue>
        <label>勤怠_出勤時間端数処理</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserBeginTimeUnit__c</fullName>
        <defaultValue>&quot;30分&quot;</defaultValue>
        <label>勤怠_出勤時間単位</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserCalMethodType__c</fullName>
        <defaultValue>&quot;切り捨て&quot;</defaultValue>
        <label>勤怠_退勤端数処理</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserOutRestCalMethodType__c</fullName>
        <defaultValue>&quot;切り捨て&quot;</defaultValue>
        <label>勤怠_外出時間端数処理</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserOutRestTimeUnit__c</fullName>
        <defaultValue>&quot;30分&quot;</defaultValue>
        <label>勤怠_外出時間単位</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRestCalMethodType__c</fullName>
        <defaultValue>&quot;切り上げ&quot;</defaultValue>
        <label>勤怠_入室時間端数処理</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRestTimeUnit__c</fullName>
        <defaultValue>&quot;30分&quot;</defaultValue>
        <label>勤怠_入室時間単位</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserTimeUnit__c</fullName>
        <defaultValue>&quot;30分&quot;</defaultValue>
        <label>勤怠_退勤時間単位</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WatermarkRate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>すかし度制御：Default:FALSE
TRUE:  透明
FALSE: 不透明</inlineHelpText>
        <label>すかし度</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhiteBoardReport__c</fullName>
        <defaultValue>&quot;$$0003 WhiteBoard予定表&quot;</defaultValue>
        <label>レポート_WhiteBoard予定表</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZeroRoomPriceAutoSetupFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>プランブレイクの室料が０円のとき、ラックレートの料金で自動設定する、しないフラグ
TRUE:自動設定しない
FALSE: 自動設定する（デフォルト値）</inlineHelpText>
        <label>０円室料の自動設定フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maxrecords_DB__c</fullName>
        <defaultValue>10</defaultValue>
        <label>maxrecords_DB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maxrecords_DSP__c</fullName>
        <defaultValue>5</defaultValue>
        <label>maxrecords_DSP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>共通定義</label>
</CustomObject>